# obfuscateLLVM

./: ALL_BUILD.vcxproj  CMakeLists.txt  README.md  RISCVTargetParserTableGen.vcxproj  RISCVTargetParserTableGen.vcxproj.filters  TestLLVM.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  build_errors.txt  build_errors_2.txt  cmake_install.cmake  errors6.txt  intrinsics_gen.vcxproj  obfuscation_report.json  omp_gen.vcxproj  report.json
src/include/Obfuscation/: Config.h  Passes.h  Utils.h
src/lib/: CMakeLists.txt
src/lib/Core/: ObfuscationEngine.cpp
src/lib/Passes/: BogusControlFlow.cpp  Flattening.cpp  IndirectCall.cpp  StringEncryption.cpp  Substitution.cpp
src/tools/obfuscator/: CMakeLists.txt  main.cpp
test/: advanced_obf.bc  advanced_test.c  advanced_test.ll  complex_test.c  complex_test.ll  complex_test2.c  complex_test2.ll  complex_v18.ll  complex_v18_obf.bc  demo.c  demo.ll  demo_obfuscated.ll  demo_out.bc  final_obfuscated.bc  final_obfuscated.ll  final_out.bc  final_test.bc  final_v2.bc  final_v2.ll  fixed_output.bc  minimal_complex.c  minimal_complex.ll  minimal_v18.ll  minimal_v18_obf.bc  monolithic_out.bc  obfuscated_output.txt  out_all.bc  out_bcf.bc  out_fla.bc  out_sub.bc  output.bc  simple_obfuscated.bc  simple_test.c  simple_test.ll  test_all_passes.bc  test_bcf.bc  test_bcf.ll  test_complex.c  test_easy.c  test_fla.bc  (+11 more)
